# Flask-Market

./: README.md  application.py  db.sqlite3  pyproject.toml
auth/: forms.py  models.py  views.py
main/: models.py  views.py
templates/auth/: base.html  macros.html  signin.html  signup.html
templates/main/: about.html  base.html  home.html  market.html  market_add.html
