[tool.poetry]
name = "market_project"
version = "0.1.0"
description = ""
authors = ["emad-almajdalawi <majdalawi97@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.3"
Flask-SQLAlchemy = "^2.5.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = {version = "^22.6.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
